--- a/client/src/components/Pages/Home.css
+++ b/client/src/components/Pages/Home.css
@@ -37,9 +37,7 @@ button.rec-dot {
   transform: scale(1.01);
   transition: 200ms ease;
 }
-* {
-  scroll-margin-top: 20px;
-}
+
 .contindex::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: transparent;
